feat(integration): verifications tests (#86)
* feat: remove outdated /domain/authorizations code

* chore(deps): update dependencies, run npm audit fix

* chore(types): update local types with api-snippets versions

* chore(types): update local types with api-snippets versions

* chore(types): update local types with api-snippets versions

* chore(refactor): remove unused code

* feat(int): add integration test

* fix: update interface to fix bad payload errors

* chore: switch to updated api-snippets

* chore: switch to updated api-snippets

* fix: thirdpartyRequestsVerifications tests

* fix(vulns): run npm audit, ignore irrelevant vulns for 1 month

* fix(api): update to latest API-Snippets to fix payload issue
