# src/interface/api.yaml
@@ -338,7 +338,6 @@ paths:
           $ref: '#/components/responses/503'
   /thirdpartyRequests/verifications:
     parameters:
-      - $ref: '#/components/parameters/ID'
       - $ref: '#/components/parameters/Content-Type'
       - $ref: '#/components/parameters/Date'
       - $ref: '#/components/parameters/X-Forwarded-For'
@@ -352,8 +351,8 @@ paths:
       tags:
         - thirdpartyRequests
         - sampled
-      operationId: PutThirdpartyRequestsVerifications
-      summary: PutThirdpartyRequestsVerifications
+      operationId: PostThirdpartyRequestsVerifications
+      summary: PostThirdpartyRequestsVerifications
       description: >
         The HTTP request `POST /thirdpartyRequests/verifications` is used by the
         DFSP to verify a third party authorization.
@@ -366,18 +365,28 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ThirdpartyRequestsVerificationsPostRequest'
+              oneOf:
+                - $ref: >-
+                    #/components/schemas/ThirdpartyRequestsVerificationsPostRequestFIDO
+                - $ref: >-
+                    #/components/schemas/ThirdpartyRequestsVerificationsPostRequestGeneric
             example:
               verificationRequestId: 44444444-0000-0000-0000-000000000000
               challenge: <base64 encoded binary - the encoded challenge>
-              value:
-                authenticationInfo:
-                  authentication: U2F
-                  authenticationValue:
-                    pinValue: <base64 encoded binary - the signed challenge>
-                    counter: '1'
-                responseType: ENTERED
               consentId: 8d34f91d-d078-4077-8263-2c0498dhbjr
+              signedPayloadType: FIDO
+              signedPayload:
+                id: >-
+                  45c-TkfkjQovQeAWmOy-RLBHEJ_e4jYzQYgD8VdbkePgM5d98BaAadadNYrknxgH0jQEON8zBydLgh1EqoC9DA
+                rawId: >-
+                  45c+TkfkjQovQeAWmOy+RLBHEJ/e4jYzQYgD8VdbkePgM5d98BaAadadNYrknxgH0jQEON8zBydLgh1EqoC9DA==
+                response:
+                  authenticatorData: SZYN5YgOjGh0NBcPZHZgW4/krrmihjLHmVzzuoMdl2MBAAAACA==
+                  clientDataJSON: >-
+                    eyJ0eXBlIjoid2ViYXV0aG4uZ2V0IiwiY2hhbGxlbmdlIjoiQUFBQUFBQUFBQUFBQUFBQUFBRUNBdyIsIm9yaWdpbiI6Imh0dHA6Ly9sb2NhbGhvc3Q6NDIxODEiLCJjcm9zc09yaWdpbiI6ZmFsc2UsIm90aGVyX2tleXNfY2FuX2JlX2FkZGVkX2hlcmUiOiJkbyBub3QgY29tcGFyZSBjbGllbnREYXRhSlNPTiBhZ2FpbnN0IGEgdGVtcGxhdGUuIFNlZSBodHRwczovL2dvby5nbC95YWJQZXgifQ==
+                  signature: >-
+                    MEUCIDcJRBu5aOLJVc/sPyECmYi23w8xF35n3RNhyUNVwQ2nAiEA+Lnd8dBn06OKkEgAq00BVbmH87ybQHfXlf1Y4RJqwQ8=
+                type: public-key
       responses:
         '202':
           $ref: '#/components/responses/202'
@@ -656,8 +665,8 @@ components:
       description: |
         The type of the Credential.
         - "FIDO" - A FIDO public/private keypair
-    FIDOPublicKeyCredential:
-      title: FIDOPublicKeyCredential
+    FIDOPublicKeyCredentialAttestation:
+      title: FIDOPublicKeyCredentialAttestation
       type: object
       description: >
         An object sent in a `PUT /consents/{ID}` request.
@@ -740,7 +749,7 @@ components:
             - PENDING
           description: The challenge has signed but not yet verified.
         payload:
-          $ref: '#/components/schemas/FIDOPublicKeyCredential'
+          $ref: '#/components/schemas/FIDOPublicKeyCredentialAttestation'
       required:
         - credentialType
         - status
@@ -1016,105 +1025,85 @@ components:
           $ref: '#/components/schemas/ErrorInformation'
       required:
         - errorInformation
-    AuthenticationType:
-      title: AuthenticationType
+    SignedPayloadTypeFIDO:
+      title: SignedPayloadTypeFIDO
       type: string
       enum:
-        - OTP
-        - QRCODE
-        - U2F
-      description: |-
-        Below are the allowed values for the enumeration AuthenticationType.
-        - OTP - One-time password generated by the Payer FSP.
-        - QRCODE - QR code used as One Time Password.
-        - U2F - U2F is a new addition isolated to Thirdparty stream.
-    OtpValue:
-      title: OtpValue
-      type: string
-      pattern: '^\d{3,10}$'
-      description: >-
-        The API data type OtpValue is a JSON String of 3 to 10 characters,
-        consisting of digits only. Negative numbers are not allowed. One or more
-        leading zeros are allowed.
-    QRCODE:
-      title: QRCODE
-      type: string
-      minLength: 1
-      maxLength: 64
-      description: QR code used as a One Time Password.
-    U2FPIN:
-      title: U2FPIN
-      type: string
-      pattern: '^\S{1,64}$'
-      minLength: 1
-      maxLength: 64
-      description: >
-        U2F challenge-response, where payer FSP verifies if the response
-        provided by end-user device matches the previously registered key.
-    Integer:
-      title: Integer
-      type: string
-      pattern: '^[1-9]\d*$'
-      description: >-
-        The API data type Integer is a JSON String consisting of digits only.
-        Negative numbers and leading zeroes are not allowed. The data type is
-        always limited to a specific number of digits.
-    U2FPinValue:
-      title: U2FPinValue
+        - FIDO
+      description: Describes a challenge that has been signed with FIDO Attestation flows
+    FIDOPublicKeyCredentialAssertion:
+      title: FIDOPublicKeyCredentialAssertion
       type: object
       description: >
-        U2F challenge-response, where payer FSP verifies if the response
-        provided by end-user device matches the previously registered key.
+        An object sent in a `PUT /thirdpartyRequests/authorization/{ID}`
+        request.
+
+        based mostly on: https://webauthn.guide/#authentication
+
+        AuthenticatorAssertionResponse
       properties:
-        pinValue:
-          allOf:
-            - $ref: '#/components/schemas/U2FPIN'
-          description: U2F challenge-response.
-        counter:
-          allOf:
-            - $ref: '#/components/schemas/Integer'
-          description: >-
-            Sequential counter used for cloning detection. Present only for U2F
-            authentication.
+        id:
+          type: string
+          description: |
+            credential id: identifier of pair of keys, base64 encoded
+            https://w3c.github.io/webauthn/#ref-for-dom-credential-id
+          minLength: 59
+          maxLength: 118
+        rawId:
+          type: string
+          description: |
+            raw credential id: identifier of pair of keys, base64 encoded.
+          minLength: 59
+          maxLength: 118
+        response:
+          type: object
+          description: |
+            AuthenticatorAssertionResponse
+          properties:
+            authenticatorData:
+              type: string
+              description: |
+                Authenticator data object.
+              minLength: 49
+              maxLength: 256
+            clientDataJSON:
+              type: string
+              description: |
+                JSON string with client data.
+              minLength: 121
+              maxLength: 512
+            signature:
+              type: string
+              description: >
+                The signature generated by the private key associated with this
+                credential.
+              minLength: 59
+              maxLength: 256
+            userHandle:
+              type: string
+              description: |
+                This field is optionally provided by the authenticator, and
+                represents the user.id that was supplied during registration.
+              minLength: 1
+              maxLength: 88
+          required:
+            - authenticatorData
+            - clientDataJSON
+            - signature
+          additionalProperties: false
+        type:
+          type: string
+          description: 'response type, we need only the type of public-key'
+          enum:
+            - public-key
       required:
-        - pinValue
-        - counter
-    AuthenticationValue:
-      title: AuthenticationValue
-      anyOf:
-        - $ref: '#/components/schemas/OtpValue'
-        - $ref: '#/components/schemas/QRCODE'
-        - $ref: '#/components/schemas/U2FPinValue'
-      description: >-
-        Contains the authentication value. The format depends on the
-        authentication type used in the AuthenticationInfo complex type.
-    AuthenticationInfo:
-      title: AuthenticationInfo
-      type: object
-      description: Data model for the complex type AuthenticationInfo.
-      properties:
-        authentication:
-          $ref: '#/components/schemas/AuthenticationType'
-        authenticationValue:
-          $ref: '#/components/schemas/AuthenticationValue'
-      required:
-        - authentication
-        - authenticationValue
-    AuthorizationResponse:
-      title: AuthorizationResponse
-      type: string
-      enum:
-        - ENTERED
-        - REJECTED
-        - RESEND
-      description: |-
-        Below are the allowed values for the enumeration.
-        - ENTERED - Consumer entered the authentication value.
-        - REJECTED - Consumer rejected the transaction.
-        - RESEND - Consumer requested to resend the authentication value.
-      example: ENTERED
-    ThirdpartyRequestsVerificationsPostRequest:
-      title: ThirdpartyRequestsVerificationsPostRequest
+        - id
+        - rawId
+        - response
+        - type
+      additionalProperties: false
+    ThirdpartyRequestsVerificationsPostRequestFIDO:
+      title: ThirdpartyRequestsVerificationsPostRequestFIDO
       type: object
       description: The object sent in the POST /thirdpartyRequests/verifications request.
       properties:
@@ -1124,13 +1113,6 @@ components:
         challenge:
           type: string
           description: Base64 encoded bytes - The challenge generated by the DFSP.
-        value:
-          type: object
-          properties:
-            authenticationInfo:
-              $ref: '#/components/schemas/AuthenticationInfo'
-            responseType:
-              $ref: '#/components/schemas/AuthorizationResponse'
         consentId:
           allOf:
             - $ref: '#/components/schemas/CorrelationId'
@@ -1139,11 +1121,60 @@ components:
             with which to verify
 
             the signed challenge against.
+        signedPayloadType:
+          $ref: '#/components/schemas/SignedPayloadTypeFIDO'
+        signedPayload:
+          $ref: '#/components/schemas/FIDOPublicKeyCredentialAssertion'
       required:
         - verificationRequestId
         - challenge
-        - value
         - consentId
+        - signedPayloadType
+        - signedPayload
+    SignedPayloadTypeGeneric:
+      title: SignedPayloadTypeGeneric
+      type: string
+      enum:
+        - GENERIC
+      description: Describes a challenge that has been signed with a private key
+    BinaryString:
+      type: string
+      pattern: '^[A-Za-z0-9-_]+[=]{0,2}$'
+      description: >-
+        The API data type BinaryString is a JSON String. The string is a
+        base64url  encoding of a string of raw bytes, where padding (character
+        ‘=’) is added at the end of the data if needed to ensure that the string
+        is a multiple of 4 characters. The length restriction indicates the
+        allowed number of characters.
+    ThirdpartyRequestsVerificationsPostRequestGeneric:
+      title: ThirdpartyRequestsVerificationsPostRequestGeneric
+      type: object
+      description: The object sent in the POST /thirdpartyRequests/verifications request.
+      properties:
+        verificationRequestId:
+          allOf:
+            - $ref: '#/components/schemas/CorrelationId'
+        challenge:
+          type: string
+          description: Base64 encoded bytes - The challenge generated by the DFSP.
+        consentId:
+          allOf:
+            - $ref: '#/components/schemas/CorrelationId'
+          description: >
+            The id of the stored consent object that contains the credential
+            with which to verify
+
+            the signed challenge against.
+        signedPayloadType:
+          $ref: '#/components/schemas/SignedPayloadTypeGeneric'
+        signedPayload:
+          $ref: '#/components/schemas/BinaryString'
+      required:
+        - verificationRequestId
+        - challenge
+        - consentId
+        - signedPayloadType
+        - signedPayload
   parameters:
     Content-Type:
       name: Content-Type
